--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "csversion",
   "description": "Configures your C# project to allow easy versioning",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "homepage": "https://github.com/trydis/csversion",
   "author": {
     "name": "Morten Trydal",
@@ -22,7 +22,9 @@
   ],
   "keywords": [
     "cli",
-    "command line"
+    "dotnet",
+    "csharp",
+    "c#"
   ],
   "files": [
     "bin",
