--- a/.jshintrc
+++ b/.jshintrc
@@ -13,10 +13,12 @@
   "undef": true,
   "unused": true,
   "globals": {
-    "define": true,
-    "before": true,
-    "after": true,
-    "describe": true,
-    "it": true
+    "define": false,
+    "before": false,
+    "beforeEach" : false,
+    "after": false,
+    "afterEach"  : false,
+    "describe": false,
+    "it": false
   }
 }
