Write AssemblyVersion.cs to IntermediateOutputPath
So we don't need to mess with .gitignore

--- a/targets/BuildCommon.targets
+++ b/targets/BuildCommon.targets
@@ -22,6 +22,7 @@
     <ParameterGroup>
       <Version ParameterType="System.String" Required="true" />
       <InfoVersion ParameterType="System.String" Required="true" />
+      <TempPath ParameterType="System.String" Required="true" />
     </ParameterGroup>
     <Task>
       <Using Namespace="System.IO" />
@@ -30,18 +31,18 @@
           var contents = "[assembly: System.Reflection.AssemblyVersion(\"" + Version + "\")]\n";
           contents += "[assembly: System.Reflection.AssemblyFileVersion(\"" + Version + "\")]\n";
           contents += "[assembly: System.Reflection.AssemblyInformationalVersion(\"" + InfoVersion + "\")]";
-          File.WriteAllText("Properties\\AssemblyVersion.cs", contents);
+          File.WriteAllText(TempPath + "AssemblyVersion.cs", contents);
         ]]>
       </Code>
     </Task>
   </UsingTask>
   
   <Target Name="UpdateVersion" DependsOnTargets="GetVersion">
-    <WriteAssemblyVersion Version="$(Version)" InfoVersion="$(InfoVersion)" />
+    <WriteAssemblyVersion Version="$(Version)" InfoVersion="$(InfoVersion)" TempPath="$(IntermediateOutputPath)" />
   </Target>
 
   <ItemGroup>
-    <Compile Include="Properties\AssemblyVersion.cs" />
+    <Compile Include="$(IntermediateOutputPath)AssemblyVersion.cs" />
   </ItemGroup>
 
 </Project>
