Extend the clean process
So AssemblyVersion.cs will be removed when cleaning the solution

--- a/targets/BuildCommon.targets
+++ b/targets/BuildCommon.targets
@@ -43,6 +43,7 @@
 
   <ItemGroup>
     <Compile Include="$(IntermediateOutputPath)AssemblyVersion.cs" />
+    <FileWrites Include="$(IntermediateOutputPath)AssemblyVersion.cs"/>
   </ItemGroup>
 
 </Project>
